public/style.css
body {
  margin: 0;
  background-color: #c1b5ad;
}

hr {
  width: 70%;
  margin: auto;
}

a {
  text-decoration: none;
}

button {
  background-color: #98bf64;
  color: white;
  padding: 1em 4em;
  margin: 1em auto;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

button:hover {
  background-color: #b4db7e;
}

ul.nav-links {
  list-style-type: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

ul.nav-links li {
  margin-left: 1em;
  margin-right: 1em;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: 'Press Start 2P', cursive;
}

.nav-container h1 {
  margin-left: 1em;
  font-family: 'Press Start 2P', cursive;
}

.pixel-font {
  font-family: 'Press Start 2P', cursive;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #98bf64;
  height: 10vh;
}
.nav-container:visited {
  color: #000000;
}

.sprite {
  height: 40px;
  width: 40px;
}

.sidebarStyle {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  margin: 12px;
  background-color: #404040;
  color: #ffffff;
  z-index: 1 !important;
  padding: 6px;
  font-weight: bold;
}

.orgDetails {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.orgImg {
  padding: 20px;
}

.orgInfo {
  padding: 20px;
}

.donation {
  padding-top: 20px;
}

.logo-font {
  font-size: 2em;
}

#logo,
.nav-me {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 1em;
  margin-right: 1em;
}

#authnav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

